--- a/css/custom-styles.css
+++ b/css/custom-styles.css
@@ -1,14 +1,14 @@
-.cit-navbar {
+.citizens-navbar {
     height: 25px;
     color: #0066a1;
     font: 300 23px / 42.701px AvenirLTStd;
     float: right;
 }
-.cit-topnav {
+.citizens-topnav {
     background-color: #0066a1;
     height: 37px;
 }
-.cit-dockbar-text {
+.citizens-dockbar-text {
     color: #ffffff;
     font: 300 15px / 42.701px AvenirLTStd;
     line-height: 42.701px;
@@ -26,59 +26,54 @@ div {
 }
 */
 
-.cit-logo {
+.citizens-logo {
     height: 69px;
     width: 202px;
     float: left;
 }
-.cit-footer {
+.citizens-footer {
     background-color: #0066a1;
     height: 93px;
     width: 100%;
     position: relative;
 }
-.cit-footer-right {
+.citizens-footer-right {
     float: right;
     width: 10%;
 }
-.cit-footer-left {
+.citizens-footer-left {
     float: left;
     width: 89.5%;
     margin-left: 0.5%;
 }
-.cit-footer-left p {
+.citizens-footer-left p {
     color: #ffffff;
     font: 300 15px / 18px AvenirLTStd;
     margin: 0;
 }
-.cit-footer img {
+.citizens-footer img {
     margin-top: 3%;
 }
-.cit-alert {
-    background-color: #9e0b0f;
-    height: 37px;
-    top: 0px;
-    width: 100%;
-}
-.cit-alert-text {
+
+.citizens-alert-text {
     color: #ffffff;
     font: 800 20px / 42.701px AvenirLTStd;
     text-align: center;
 }
-.cit-carousel {} .cit-clear {
+.citizens-carousel {} .citizens-clear {
     height: 0;
     line-height: 0;
     clear: both;
 }
-.cit-slider-span {
+.citizens-slider-span {
     display: inline;
 }
-div.cit-slider-span img:nth-child(1) {
+div.citizens-slider-span img:nth-child(1) {
     z-index: 1;
     position: relative;
     left: 0%;
 }
-div.cit-slider-span img:nth-child(2) {
+div.citizens-slider-span img:nth-child(2) {
     z-index: 5;
     top: 0;
     left: -32.5%;
@@ -98,21 +93,18 @@ html,body {
     margin: none;
     padding: none;
 }
+*/
 
 div.stretch {
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    left: 0px;
-    top: 0px;
     z-index: -99999;
+    padding-left: 0;
+    padding-right: 0;
     -webkit-user-select: none;
     -khtml-user-select: none;
     -moz-user-select: none;
     -o-user-select: none;
     user-select: none;
 }
-*/
 
 /*
 div img.stretch {
@@ -133,8 +125,7 @@ img.gallery {
     -webkit-filter: grayscale(0.6);/* Google Chrome, Safari 6+ & Opera 15+ */
     -webkit-box-shadow: 0px 2px 6px 2px rgba(0, 0, 0, 0.75);
     -moz-box-shadow: 0px 2px 6px 2px rgba(0, 0, 0, 0.75);
-    box-shadow: 0px 2px 6px 2px rgba(0, 0, 0, 0.75);
-    margin-bottom: 20px;
+/*    box-shadow: 0px 2px 6px 2px rgba(0, 0, 0, 0.75);*/
 }
 
 img.gallery:hover {
@@ -174,4 +165,15 @@ img.gallery:hover {
 }
 
 .navbar-second{
+}
+
+.citizens-alert {
+    z-index: 2000;
+    color: white;
+    background-color: #9e0b0f;
+    width: 100%;
+}
+
+.navbar-bottom {
+        margin-top: 20px;
 }
