--- a/css/custom-styles.css
+++ b/css/custom-styles.css
@@ -19,12 +19,6 @@
     border-color: red;
     z-index: 10;
 }
-/*
-div {
-    border-style: solid;
-    border-color: red;
-}
-*/
 
 .citizens-logo {
     height: 69px;
@@ -81,61 +75,25 @@ div.citizens-slider-span img:nth-child(2) {
     display: run-in;
     opacity: 0.6;
 }
-img.stretch {
-    width: 100%;
-    height: auto;
-    min-height: 100%;
-}
-/*
-html,body {
-    height: 100%;
-    width: 100%
-    margin: none;
-    padding: none;
-}
-*/
 
 div.stretch {
-    z-index: -99999;
     padding-left: 0;
     padding-right: 0;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -o-user-select: none;
-    user-select: none;
 }
 
-/*
-div img.stretch {
-    width: 100%;
-    height: 100%;
-}
-*/
-
-div.panel {
-    z-index: 10;
-}
-/*
-image gallery
-*/
 
 img.gallery {
-    filter: gray;/* IE6-9 */
-    -webkit-filter: grayscale(0.6);/* Google Chrome, Safari 6+ & Opera 15+ */
-    -webkit-box-shadow: 0px 2px 6px 2px rgba(0, 0, 0, 0.75);
-    -moz-box-shadow: 0px 2px 6px 2px rgba(0, 0, 0, 0.75);
-/*    box-shadow: 0px 2px 6px 2px rgba(0, 0, 0, 0.75);*/
+  filter: gray; 
+  -webkit-filter: grayscale(1); 
 }
 
 img.gallery:hover {
-    filter: none;
-    /* IE6-9 */
-    -webkit-filter: grayscale(0);
-    /* Google Chrome, Safari 6+ & Opera 15+ */
+  filter: none; 
+  -webkit-filter: grayscale(0); 
+ 
 }
 
-/*image gallery*/
+
 
 .product-box {
     
@@ -172,6 +130,7 @@ img.gallery:hover {
     color: white;
     background-color: #9e0b0f;
     width: 100%;
+    font-size: 20px;
 }
 
 .navbar-bottom {
