--- a/css/custom-styles.css
+++ b/css/custom-styles.css
@@ -54,7 +54,7 @@
     font: 800 20px / 42.701px AvenirLTStd;
     text-align: center;
 }
-.citizens-carousel {} .citizens-clear {
+.citizens-clear {
     height: 0;
     line-height: 0;
     clear: both;
@@ -103,7 +103,7 @@ img.gallery:hover {
 .gallery-title {
     position: absolute;
     top: 10px;
-    font-size: 200%
+    font-size: 25px;
     text-align: left;
     z-index: 15;
     padding-top: 5px;
@@ -112,14 +112,39 @@ img.gallery:hover {
     padding-left: 20px;
     width: 100%;
 }
-
- .gallery-text {
+.gallery-text {
     position: absolute;
     color: #fff;
     top: 20px;
     text-align: left;
     padding: 20px 15px 20px 15px;
     width:100%;
+}
+
+.carousel-title {
+    position: absolute;
+    top: auto;
+    bottom: 20%;
+    left: 46%;
+    font-size: 55.68pt;
+    text-align: left;
+    padding-bottom: 0px;
+    padding-right: 0px;
+    width: 100%;
+    color: white;
+}
+.carousel-text {
+    position: absolute;
+    top: auto;
+    bottom: 10%;
+    left: 47.5%;
+    text-align: left;
+    width:100%;
+    font-size: 12.7pt;
+    color: #fff;
+    margin: 0px 0 0px !important;
+    padding: 10px 0px 0px 0px;
+    line-height: 70%;
 }
 
 .navbar-second{
@@ -135,4 +160,25 @@ img.gallery:hover {
 
 .navbar-bottom {
         margin-top: 20px;
+}
+
+
+.navbar-inverse .navbar-nav > li > a:hover, .navbar-inverse .navbar-nav > li > a:focus {
+    background-color: #004A10;
+}
+
+#menuLogin
+{
+    background-color: #7CB8FF;
+}
+
+
+#menuLogin a:hover, #menuLogin a:focus
+{
+    background-color: #7CB8FF;
+}
+
+.navbar-second 
+{
+    font-size: 24.92px;
 }
