--- a/css/custom-styles.css
+++ b/css/custom-styles.css
@@ -131,13 +131,26 @@ img.gallery:hover {
     top: auto;
     bottom: 24%;
     left: 47%;
-    font-size: 4.7em;
+    font-size: 4.7rem;
     text-align: left;
     padding-bottom: 0px;
     padding-right: 0px;
     width: 100%;
     color: white;
 }
+@media(max-width: 680px) 
+{
+    .carousel-title {
+        font-size: 3.2rem;
+    }
+}
+@media(max-width: 300px) 
+{
+    .carousel-title {
+        font-size: 1.2rem;
+    }
+}
+
 .carousel-text {
     position: absolute;
     top: auto;
