--- a/less/bootstrap/carousel.less
+++ b/less/bootstrap/carousel.less
@@ -172,8 +172,12 @@
 
 .carousel-indicators {
   position: absolute;
-  bottom: 10px;
-  left: 50%;
+    
+//  bottom: 10px;
+  bottom: -4%;
+//  left: 50%;
+  left: auto;
+    right: -26%;
   z-index: 15;
   width: 60%;
   margin-left: -30%;
@@ -264,6 +268,6 @@
 
   // Move up the indicators
   .carousel-indicators {
-    bottom: 20px;
+//    bottom: 20px;
   }
 }
