--- a/citizensfla-theme/src/main/webapp/css/custom.css
+++ b/citizensfla-theme/src/main/webapp/css/custom.css
@@ -180,10 +180,40 @@ body {
 					width: 96px;
 					a {
 						text-align: center;
+						> i {
+							display: none;
+						}
 					}
 					a:hover {
 						background: $lightblue !important;
 						text-decoration: underline;
+					}
+					> .dropdown-menu {
+						margin-left: -188px;
+						width: 284px;
+						.portlet {
+							background: $darkblue !important;
+							padding: 20px !important;
+							color: white;
+							#_58_login, #_58_password {
+								width: 208px;
+							}
+							.control-label {
+								display: none !important;
+							}
+							.control-group, .button-holder {
+								margin: 0 !important;
+							}
+							.navigation {
+								background: transparent !important;
+								.taglib-icon-list {
+									padding: 0 !important;
+								}
+							}
+							label, a.taglib-icon, a.taglib-icon:hover {
+								color: white !important;
+							}
+						}
 					}
 				}
 			}
@@ -331,34 +361,6 @@ body {
 
 				&.active > a {
 					background-color: $darkblue;
-				}
-			}
-
-			#_145_loginDropdown > .dropdown-menu {
-				margin-left: -188px;
-				width: 284px;
-				.portlet {
-					background: $darkblue !important;
-					padding: 20px !important;
-					color: white;
-					#_58_login, #_58_password {
-						width: 208px;
-					}
-					.control-label {
-						display: none !important;
-					}
-					.control-group, .button-holder {
-						margin: 0 !important;
-					}
-					.navigation {
-						background: transparent !important;
-						.taglib-icon-list {
-							padding: 0 !important;
-						}
-					}
-					label, a.taglib-icon, a.taglib-icon:hover {
-						color: white !important;
-					}
 				}
 			}
 
