--- a/citizensfla-theme/src/main/webapp/css/custom.css
+++ b/citizensfla-theme/src/main/webapp/css/custom.css
@@ -178,6 +178,7 @@ body {
 				#_145_searchDropdown {
 					.portlet {
 						background: transparent !important;
+						margin-right: 12px !important;
 						.control-group.control-group-inline {
 							margin: 4px !important;
 							#_search_WAR_searchportlet_keywords {
@@ -189,16 +190,14 @@ body {
 								height: 22px;
 								font-size: 14px;
 								color: rgb(149, 149, 149);
-								margin-top: 10px;
+								margin: 0;
 								border: 0;
 							}
-							.btn {
+							#_search_WAR_searchportlet_search {
 								height: 25px;
 								width: 26px;
-								right: 18px;
-								top: 24px;
-								position: absolute;
 								text-indent: 7px;
+								margin-left: -7px;
 								background: $darkblue !important;
 								border-radius: 0;
 								color: #fff !important;
@@ -436,7 +435,7 @@ body {
 			li {
 				&.dropdown {
 					&.open > .dropdown-toggle {
-						background: $darkblue !important;
+						background: #fff !important;
 					}
 					> .dropdown-toggle {
 						.caret {
@@ -466,7 +465,8 @@ body {
 			}
 
 			.dropdown-menu {
-				background: $darkblue !important;
+				background: #fff !important;
+				box-shadow: none;
 				border-width: 0;
 				margin: 0;
 
@@ -916,6 +916,11 @@ body {
 }
 
 .aui {
+	.navbar-header .navbar-brand {
+		height: auto !important;
+		position: relative;
+		z-index: 1;
+	}
 	#navigation {
 		float: right;
 		margin-top: 50px;
@@ -947,6 +952,14 @@ body {
 					&.active > a {
 						font-family: 'Avenir95-Black' !important;
 					}
+				}
+				.dropdown-menu.child-menu a {
+					line-height: 34px;
+					margin-left: 0;
+					margin-left: 10px;
+					&:hover {
+						background: transparent !important;
+					} 
 				}
 			}
 		}
