--- a/citizensfla-theme/src/main/webapp/css/custom.css
+++ b/citizensfla-theme/src/main/webapp/css/custom.css
@@ -178,7 +178,7 @@ body {
 				#_145_searchDropdown {
 					.portlet {
 						background: transparent !important;
-						margin-right: 12px !important;
+						margin-right: 62px !important;
 						.control-group.control-group-inline {
 							margin: 4px !important;
 							#_search_WAR_searchportlet_keywords {
@@ -194,15 +194,16 @@ body {
 								border: 0;
 							}
 							#_search_WAR_searchportlet_search {
-								height: 25px;
-								width: 26px;
-								text-indent: 7px;
+								height: 22px;
 								margin-left: -7px;
-								background: $darkblue !important;
+								background: $lightblue !important;
 								border-radius: 0;
 								color: #fff !important;
 								line-height: 14px;
 								overflow: hidden;
+								border: 0;
+								top: 8px;
+								position: absolute;
 								&:before {
 									content: "►";
 								}
@@ -469,6 +470,7 @@ body {
 				box-shadow: none;
 				border-width: 0;
 				margin: 0;
+				min-width: auto !important;
 
 				&:after, &:before {
 					border-width: 0;
@@ -934,12 +936,13 @@ body {
 			ul.nav-collapse {
 				margin: 0;
 				li {
+					margin-left: 55px;
 					a {
 						font-family: 'Avenir35-Light' !important;
 						color: $darkblue;
 						font-size: 24.92px;
 						padding: 0;
-						margin-left: 55px;
+						margin-left: 0;
 						&:hover, &:focus {
 							text-decoration: underline;
 							color: rgb(0, 0, 0);
@@ -953,13 +956,19 @@ body {
 						font-family: 'Avenir95-Black' !important;
 					}
 				}
-				.dropdown-menu.child-menu a {
-					line-height: 34px;
-					margin-left: 0;
-					margin-left: 10px;
-					&:hover {
-						background: transparent !important;
-					} 
+				.dropdown-menu.child-menu {
+					li {
+						margin-left: 0px;
+					}
+					a {
+						line-height: 34px;
+						margin-left: 0;
+						margin-left: 10px;
+						font-size: 20px;
+						&:hover {
+							background: transparent !important;
+						} 
+					}
 				}
 			}
 		}
